# pycaravel

./: .buildinfo  .pre-commit-config.yaml  README.rst  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  sg_execution_times.html
.github/workflows/: documentation.yml  linters.yml
_downloads/2f22b861a03a6137f5a5093b26037bc5/: bids_managers.ipynb
_downloads/76325e7b5f7c7110f3b0fd858029870f/: bids_users.ipynb
_downloads/8aec8a4c9153e09db815307ae6cc03e7/: ensemble_validation.ipynb
_downloads/d95e2b4f7a58b009dd8ac12d21231a72/: rlink_validation.ipynb
_modules/: index.html
_modules/caravel/: configure.html  io.html  mail.html  parser.html  utils.html  validation.html
_modules/caravel/loaders/: _csv.html  _dwi.html  _edf.html  _json.html  _mp4.html  _mzml.html  _nifti.html  _pdf.html  _plink.html  _png.html  _targz.html  _tsv.html  _vcf.html  _xlsx.html  loader_base.html
_modules/caravel/nextcloud/: base.html  nextcloud.html  requester.html  response.html
_modules/caravel/parsers/: bids.html  parser_base.html
_sources/: sg_execution_times.rst.txt
_sources/auto_gallery/: index.rst.txt
_sources/auto_gallery/bids/: bids_managers.rst.txt  bids_users.rst.txt  index.rst.txt  sg_execution_times.rst.txt
_sources/auto_gallery/validation/: ensemble_validation.rst.txt  index.rst.txt  rlink_validation.rst.txt  (+1 more)
auto_gallery/: index.html  sg_execution_times.html
auto_gallery/bids/: bids_managers.html  bids_users.html  index.html  sg_execution_times.html
auto_gallery/validation/: ensemble_validation.html  index.html  rlink_validation.html  sg_execution_times.html
caravel/: __init__.py  configure.py  info.py  mail.py  parser.py  utils.py  validation.py
caravel/loaders/: _json.py  _pdf.py  _plink.py  _targz.py
caravel/parsers/: bids.py  parser_base.py
caravel/scripts/: project-ci
doc/: requirements.txt
doc/source/: conf.py
examples/: README.txt
examples/conf/: hbn_derivatives.conf
(+15 files in other folders)
