[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "pycaravel"
readme = "README.rst"
requires-python = ">=3.8"
version = "1.0.0"
authors = [
    {name = "pycaravel developers", email = "antoine.grigis@cea.fr"},
]
license = {text = "CeCILL-B"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "pandas",
    "grabbit @ git+https://github.com/grabbles/grabbit.git",
    "nibabel",
    "numpy",
    "imageio[ffmpeg]",
    "PyPDF2",
    "vcfpy",
    "pandas-plink",
    "pyEDFlib",
    "requests",
    "python-docx",
    "fire",
    "pymzml",
]

[project.urls]
Source = "https://github.com/neurospin-cloud/pycaravel/"
Tracker = "https://github.com/neurospin-cloud/pycaravel/issues"

[tool.setuptools]
script-files = ["caravel/scripts/project-ci"]
platforms = ["Linux", "OSX"]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["doc"]
namespaces = false

[tool.setuptools.package-data]
caravel = ["conf/*.conf"]

[tool.ruff.lint]
extend-select = [
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "PIE",  # flake8-pie
    "PYI",  # flake8-pyi
    "SIM",  # flake8-simplify
    "FLY",  # flynt
    "PERF", # Perflint
    "N",    # pep8-naming
    "FURB", # refurb
    "RUF",
]
ignore = [
    "UP015",
    "B023",
    "B028",
    "B904",
    "PYI024",
    "RUF005",
    "RUF012",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401"]

[tool.nosetests]
verbosity = "2"
nologcapture = "0"
cover-package = "caravel"
with-coverage = "1"

[tool.build_sphinx]
source-dir = "doc"
build-dir = "doc/build"
all_files = "1"
